# python-training-template

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  error.txt  pyproject.toml
.github/workflows/: ci.yml  lint-format-test.yml
days/: __init__.py
days/day_01_type_hinting/: __init__.py  task.py  test_task.py
days/day_02_collections/: __init__.py  task.py  test_task.py
days/day_03_comprehensions/: __init__.py  task.py  test_task.py
days/day_04_error_handling/: __init__.py  task.py  test_task.py
days/day_05_file_io/: __init__.py  task.py  test_task.py
days/day_06_oop/: __init__.py  task.py  test_task.py
days/day_07_integration/: __init__.py  task.py  test_task.py
days/day_08_async_basics/: __init__.py  task.py  test_task.py
days/day_09_pydantic/: __init__.py  task.py  test_task.py
days/day_10_fastapi_basics/: __init__.py  task.py  test_task.py
days/day_11_fastapi_crud/: __init__.py  task.py  test_task.py
days/day_12_dependency_injection/: __init__.py  task.py  test_task.py
days/day_13_testing_mocking/: __init__.py  task.py  test_task.py
days/day_14_production_app/: __init__.py  task.py  test_task.py
